tests/testcases/errors/BCE0131-1.boo
"""
BCE0131-1.boo(5,25): BCE0131: Invalid combination of modifiers on 'voodoo.testerrester': static, abstract.
"""
abstract class voodoo:
	abstract static def testerrester():
		pass
